--- a/package.json
+++ b/package.json
@@ -1,7 +1,105 @@
 {
     "name": "react-asciidoc",
     "description": "React Asciidoctor wrapper",
-    "version": "0.0.1",
-    "dependencies": {},
-    "devDependencies": {}
+    "version": "0.1.0",
+    "author": "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)",
+    "contributors": [
+        "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)"
+    ],
+    "license": "MIT",
+    "homepage": "https://github.com/avin/react-asciidoc",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/avin/react-asciidoc"
+    },
+    "bugs": {
+        "url": "https://github.com/avin/react-asciidoc/issues"
+    },
+    "engines": {
+        "node": ">8.0.0"
+    },
+    "keywords": [
+        "react",
+        "reactjs",
+        "asciidoc",
+        "asciidoctor"
+    ],
+    "main": "dist/index.cjs.js",
+    "module": "dist/index.esm.js",
+    "files": [
+        "dist",
+        "src/*.js",
+        "README.md"
+    ],
+    "scripts": {
+        "build": "rimraf dist && mkdir dist && yarn build:flow && yarn build:source",
+        "build:demo": "build-storybook -o demo",
+        "build:flow": "cpr flow-template dist/index.cjs.js.flow && cpr flow-template dist/index.esm.js.flow",
+        "build:source": "rollup -c",
+        "deploy": "rimraf demo && npm run build:demo && gh-pages -d demo -r https://github.com/avin/react-asciidoc",
+        "flow": "flow check --max-warnings=0 src && flow check website",
+        "linc": "lint-staged",
+        "lint": "eslint '**/*.js'",
+        "precommit": "lint-staged",
+        "prepare": "yarn run build",
+        "postpublish": "npm run deploy",
+        "prettier": "prettier --write \"**/*.{js,json,css}\"",
+        "start": "rollup -c -w",
+        "storybook": "start-storybook -p 9009",
+        "test": "cross-env CI=1 react-scripts test --env=jsdom",
+        "test:watch": "react-scripts test --env=jsdom",
+        "test:debug": "react-scripts --inspect --inspect-brk test --env=jsdom --runInBand"
+    },
+    "lint-staged": {
+        "{website,src}/**/*.{js,json,css}": [
+            "prettier --write",
+            "git add"
+        ],
+        "**/*.js": "eslint --max-warnings 0"
+    },
+    "dependencies": {
+        "@babel/runtime": "^7.0.0",
+        "asciidoctor.js": "1.5.7"
+    },
+    "peerDependencies": {
+        "react": "^15.0.0 || ^16.0.0",
+        "react-dom": "^15.0.0 || ^16.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.0.0",
+        "@babel/plugin-proposal-class-properties": "^7.0.0",
+        "@babel/plugin-transform-runtime": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-flow": "^7.0.0",
+        "@babel/preset-react": "^7.0.0",
+        "@storybook/addon-actions": "^4.0.2",
+        "@storybook/addon-links": "^4.0.2",
+        "@storybook/addons": "^4.0.2",
+        "@storybook/react": "^4.0.2",
+        "babel-core": "^7.0.0-bridge.0",
+        "babel-loader": "^8.0.4",
+        "babel-plugin-annotate-pure-calls": "^0.3.0",
+        "codemirror": "^5.41.0",
+        "codemirror-asciidoc": "^1.0.4",
+        "cpr": "^3.0.1",
+        "cross-env": "^5.1.4",
+        "enzyme": "^3.7.0",
+        "enzyme-adapter-react-16": "^1.6.0",
+        "eslint-config-prettier": "^3.1.0",
+        "flow-bin": "^0.80.0",
+        "gh-pages": "^1.1.0",
+        "lint-staged": "^7.0.5",
+        "prettier": "^1.12.1",
+        "prop-types": "^15.6.2",
+        "react": "^16.5.1",
+        "react-dom": "^16.5.1",
+        "react-scripts": "^1.1.1",
+        "react-test-renderer": "^16.4.0",
+        "rimraf": "^2.6.2",
+        "rollup": "^0.65.0",
+        "rollup-plugin-babel": "^4.0.2",
+        "rollup-plugin-commonjs": "^8.2.1",
+        "rollup-plugin-node-resolve": "^3.0.2",
+        "lodash.debounce": "^4.0.8"
+    }
 }
